@@ -1,3 +1,8 @@
+2016-06-13  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/functions.R (TeXunits,.TeXunit.table): add
+	remaining units from TeXBook
+
 2016-03-31  Enrico Schumann  <es@enricoschumann.net>
 
 	* R/functions.R (rmspace): remove function -- use
